--- a/1 main.tex
+++ b/1 main.tex
@@ -10,7 +10,7 @@
 %%% The following command loads the amsrefs package, which will be
 %%% used to create the bibliography:
 \usepackage[lite]{amsrefs}
-\usepackage{/Users/songye03/Desktop/math_tex/style/macros}
+\usepackage{macros}
 
 \usepackage{hyperref}
 \hypersetup{
@@ -240,5 +240,6 @@ We study toric varieties and their invariants.
 
 \bibliography{refs}{}
 \bibliographystyle{plain}
+
 
 \end{document}
